# event_camera_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yaml
cmake/: CMakeListsROS1.txt  CMakeListsROS2.txt  ROS1.cmake  ROS2.cmake
include/event_array_msgs/: decode.h  encode.h
msg_ros1/: EventArray.msg  EventPacket.msg
msg_ros2/: EventArray.msg  EventPacket.msg
python/: bag_decode_example.py  bag_decode_example_ros2.py  bag_encode_example_ros2.py
